# ImCode

./: .gitignore  .gitmodules  CMakeLists.txt  ImCode.cpp  ImCode.h  README.md  submodules.init.txt
.github/: FUNDING.yml
cmake/: 3rdparty.cmake  ezlibs.cmake  googletest.cmake  imcode.cmake  imgui.cmake  imgui_test_engine.cmake
src/: main.cpp
src/tests/: ImCodeTests.cpp  ImCodeTests.h
tests/: CMakeLists.txt
